--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "atom": ">=1.0.0 <2.0.0"
   },
   "dependencies": {
-    "figlet": "1.1.1"
+    "figlet": "1.1.1",
+    "string-format": "0.5.0"
   }
 }
