--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   },
   "dependencies": {
     "figlet": "1.1.1",
-    "string-format": "0.5.0"
+    "string-format": "0.5.0",
+    "cheerio": "0.20.0",
+    "validator": "5.1.0"
   }
 }
