--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "figlet": "1.1.1",
     "string-format": "0.5.0",
     "cheerio": "0.20.0",
-    "validator": "5.1.0"
+    "validator": "5.1.0",
+    "lowdb": "0.12.5"
   }
 }
