--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "string-format": "0.5.0",
     "cheerio": "0.20.0",
     "validator": "5.1.0",
-    "lowdb": "0.12.5"
+    "lowdb": "0.12.5",
+    "async": "1.5.2"
   }
 }
