--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "cheerio": "0.20.0",
     "validator": "5.1.0",
     "lowdb": "0.12.5",
-    "async": "1.5.2"
+    "async": "1.5.2",
+    "request": "2.69.0"
   }
 }
