--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "validator": "5.1.0",
     "lowdb": "0.12.5",
     "async": "1.5.2",
-    "request": "2.69.0"
+    "request": "2.69.0",
+    "js-beautify": "1.6.2"
   }
 }
