add menu options

--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
       "generate:ascii_art",
       "generate:display",
       "generate:java_model",
+      "generate:json-java",
+      "generate:json-java-url",
+      "generate:json-java-db-xutils",
+      "generate:json-java-db-ormlite",
       "generate:java_format"
       ]
   },
