--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
       "generate:json-java-url",
       "generate:json-java-db-xutils",
       "generate:json-java-db-ormlite",
+      "generate:fileds-java",
+      "generate:fileds-java-db-xutils",
+      "generate:fileds-java-ormlite",
       "generate:template-search",
       "generate:template-find-view",
       "generate:get-url-listurl",
