--- a/config/config.json
+++ b/config/config.json
@@ -1,5 +1,5 @@
 {
-  "basePath1": "C:\\Users\\up366pc1.hxtt-pc1\\.atom\\packages\\generate\\",
-  "basePath": "C:\\Users\\y\\github\\generate\\",
+  "basePath": "C:\\Users\\up366pc1.hxtt-pc1\\.atom\\packages\\generate\\",
+  "basePath1": "C:\\Users\\y\\github\\generate\\",
   "runOneSpec": true
 }
