json2string string2json

--- a/config/config.ini
+++ b/config/config.ini
@@ -1,6 +1,6 @@
 [gen_java]
 packageName=
-className=UrlUserInfo
+className=FlowPic
 
 [get_url]
 cookies="JSESSIONID=B3754B1FF43844560AE2C2A18D16CB5C-n2; CASTGC=TGT-1005-eex0WMe9oCHvPwlg4RtkY2hPbKPqXLnOezJIU0lkspqlcFhrtF-cas"
