--- a/package.json
+++ b/package.json
@@ -57,6 +57,9 @@
     "async": "1.5.2",
     "request": "2.69.0",
     "js-beautify": "1.6.2",
-    "html-entities": "1.2.0"
+    "html-entities": "1.2.0",
+    "ini": "1.3.4",
+    "mkdirp": "0.5.1",
+    "qs": "6.1.0"
   }
 }
