Signed-off-by: yuanliwei <891789592@qq.com>

--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
       "generate:json-java",
       "generate:json-java-url",
       "generate:json-java-db-xutils",
+      "generate:json-java-db-xutils3",
       "generate:json-java-db-ormlite",
       "generate:gen-style-xml",
       "generate:fileds-java",
       "generate:fileds-java-db-xutils",
+      "generate:fileds-java-db-xutils3",
       "generate:fileds-java-ormlite",
       "generate:template-search",
       "generate:template-find-view",
